@@ -3181,111 +3181,6 @@ bool areCorrSetupsCompatible(const CorrSetup *A, const CorrSetup *B, const CorrP
 	return true;
 }
 
-int CorrParams::loadShelves(const std::string &fileName)
-{
-	int nWarn = 0;
-	std::ifstream is;
-	bool doAntennas;
-	char s[1024], a[32], v[32], ms[32];
-	std::string vsn, shelf;
-	std::vector<std::string> noShelf;
-
-	is.open(fileName.c_str());
-
-	if(is.fail())
-	{
-		return 0;
-	}
-
-	// only change antenna selection if the antenna list is empty to start with
-	doAntennas = antennaList.empty();
-
-	for(int lineNum = 1; ; ++lineNum)
-	{
-		is.getline(s, 1024);
-		if(is.eof())
-		{
-			break;
-		}
-		for(int i = 0; s[i]; ++i)
-		{
-			if(s[i] == '#')
-			{
-				s[i] = 0;
-				break;
-			}
-		}
-
-		if(strlen(s) < 5)
-		{
-			continue;
-		}
-
-		if(sscanf(s, "%31s%31s%31s", a, v, ms) != 3)
-		{
-			std::cerr << "Error: line " << lineNum << " of " << fileName << " not parsable." << std::endl;
-
-			exit(EXIT_FAILURE);
-		}
-
-		std::string antName(a);
-		Upper(antName);
-
-		if(doAntennas)
-		{
-			addAntenna(antName);
-		}
-		else if(!useAntenna(antName))
-		{
-			continue;
-		}
-
-		vsn = std::string(v);
-		shelf = std::string(ms);
-
-		Upper(vsn);
-		Upper(shelf);
-
-		if(shelf == std::string("NONE"))
-		{
-			noShelf.push_back(vsn);
-		}
-		else
-		{
-			shelves[vsn] = shelf;
-		}
-	}
-
-	is.close();
-
-	if(!noShelf.empty())
-	{
-		std::cerr << "Warning: " << noShelf.size() << " modules have no shelf location:";
-		for(std::vector<std::string>::const_iterator s = noShelf.begin(); s != noShelf.end(); ++s)
-		{
-			std::cerr << " " << *s;
-		}
-		std::cerr << std::endl;
-	}
-
-	return nWarn;
-}
-
-const char *CorrParams::getShelf(const std::string &vsn) const
-{
-	std::map<std::string,std::string>::const_iterator it;
-
-	it = shelves.find(vsn);
-	if(it == shelves.end())
-	{
-		return "NONE";
-	}
-	else
-	{
-		return it->second.c_str();
-	}
-}
-
 const std::string &CorrParams::getNewSourceName(const std::string &origName) const
 {
 	std::vector<SourceSetup>::const_iterator it;
